<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_match"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.activity.FindMatchActivity">

    <Button
        android:id="@+id/onFindMatchButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:enabled="false"
        android:onClick="onFindMatch"
        android:text="@string/find_match_button" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/opponentFoundText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_match_opponent_found"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/findingMatchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_match_searching"
            android:gravity="center"
            android:visibility="invisible"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminate="true"/>

    </LinearLayout>

</RelativeLayout>
