<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/mapActivityContainer"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <fragment xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/selectLocationMap"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              tools:context="com.ede.standyourground.app.activity.SelectLocationActivity"/>

    <LinearLayout
        android:id="@+id/contentBelowMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/specifyEnemyRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:clickable="false"
            android:max="23"/>

        <TextView
            android:id="@+id/seekBarOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/staticEnemyRange"/>

        <LinearLayout
            android:id="@+id/confirmCancelLocationContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirmLocationButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:enabled="false"
                android:onClick="onConfirmLocation"
                android:text="@string/confirm"/>

            <Button
                android:id="@+id/cancelLocationButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="onCancelLocation"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

